Add new certificate and new data science project

--- a/templates/index.html
+++ b/templates/index.html
@@ -572,6 +572,29 @@
                                     </ul>
 
                                     <h3 class="text-uppercase">
+                                        CS50's Introduction to Databases with SQL
+                                        <a href="https://cs50.harvard.edu/sql/2024/" target="_blank">
+                                            <i class="fas fa-external-link-alt"></i>
+                                        </a>
+                                    </h3>
+                                    <p class="item-intro text-muted">
+                                         This is CS50’s introduction to databases using a language called SQL.
+                                        Learn how to create, read, update, and delete data with relational databases,
+                                        which store data in rows and columns. And more!
+                                    </p>
+                                    <ul class="list-inline">
+                                        <li>
+                                            <strong>Course Instructor:</strong>
+                                            Carter Zenke
+                                        </li>
+                                        <li>
+                                            <strong>Certificate:</strong>
+                                            <a href="https://certificates.cs50.io/b2e36943-8f4b-4ad4-9fae-b9deefbc53ff.pdf?size=letter"
+                                               target="_blank" rel="noopener noreferrer">View Certificate</a>
+                                        </li>
+                                    </ul>
+
+                                    <h3 class="text-uppercase">
                                         100 Days of Code: The Complete Python Pro Bootcamp
                                         <a href="https://www.udemy.com/course/100-days-of-code/" target="_blank">
                                             <i class="fas fa-external-link-alt"></i>
@@ -895,165 +918,7 @@
         </div>
 
 
-        <!-- Portfolio item 3 WEB DEV-->
-
-        <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="static/assets/img/close-icon.svg" alt="Close modal" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-
-                                    <!-- Project details-->
-
-                                    <img class="img-fluid d-block mx-auto" src="static/assets/img/portfolio/w_header.jpg" alt="Browser icons" />
-                                    <h2 class="text-uppercase">
-                                        Portfolio Website
-                                    </h2>
-                                    <p class="item-intro text-muted">
-                                        A website to display my portfolio.
-                                    </p>
-                                    <p>
-                                        This project involves creating a personal portfolio website designed to showcase my work and skills.
-                                        The website features sections for project highlights, a resume, and a contact form. The goal was to
-                                        build a professional online presence that is visually appealing and user-friendly. The website is
-                                        responsive, ensuring a seamless experience across different devices and screen sizes.
-                                        Technologies used include HTML, CSS, and JavaScript, with a focus on modern web design practices.
-                                    </p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Creator:</strong>
-                                            Eike Hanel
-                                        </li>
-                                        <li>
-                                            <strong>Category:</strong>
-                                            Web Development
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-xmark me-1"></i>
-                                        Close
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <!-- Portfolio item 4 GUI PROJECTS-->
-
-        <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="static/assets/img/close-icon.svg" alt="Close modal" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-
-                                    <!-- Project details-->
-
-                                    <img class="img-fluid d-block mx-auto" src="static/assets/img/portfolio/gui_header.jpg" alt="Monitor + User Interface" />
-                                    <h2 class="text-uppercase">
-                                        Image Watermarking Desktop App
-                                    </h2>
-                                    <p class="item-intro text-muted">
-                                        GUI, that takes an image and overlays a provided watermark.
-                                    </p>
-                                    <p>
-                                        This Python Tkinter application allows you to add a watermark to your images.
-                                        It supports various image formats and provides an easy-to-use graphical
-                                        interface for loading images and applying watermarks.
-                                    </p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Creator:</strong>
-                                            Eike Hanel
-                                        </li>
-                                        <li>
-                                            <strong>GitHub:</strong>
-                                            <a href="https://github.com/EikeHanel/Watermarking-Desktop-App">Link</a>
-                                        </li>
-                                    </ul>
-                                    <h2 class="text-uppercase">Typing Speed Test</h2>
-                                    <p class="item-intro text-muted">A simple speed typing test, counting the words per minute.</p>
-
-                                    <p>
-                                        A simple typing speed test application built using Python's Tkinter library.
-                                        It generates random words, measures your typing speed in words per minute (WPM),
-                                        and highlights keystrokes based on correctness.
-                                    </p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Creator:</strong>
-                                            Eike Hanel
-                                        </li>
-                                        <li>
-                                            <strong>GitHub:</strong>
-                                            <a href="https://github.com/EikeHanel/Speed-Typing-Test">Link</a>
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-xmark me-1"></i>
-                                        Close
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <!-- Portfolio item 5 GAME DEV-->
-
-        <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="static/assets/img/close-icon.svg" alt="Close modal" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <img class="img-fluid d-block mx-auto" src="static/assets/img/portfolio/g_header.jpg" alt="Controller img" />
-                                    <h2 class="text-uppercase">Breakout</h2>
-                                    <p class="item-intro text-muted">Break all blocks to win.</p>
-                                    <p>
-                                        This is a simple Breakout game built using Python's Turtle graphics library.
-                                        The game features a paddle, a ball, and blocks.
-                                        The goal is to break all the blocks by bouncing the ball off the paddle.
-                                    </p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Creator:</strong>
-                                            Eike Hanel
-                                        </li>
-                                        <li>
-                                            <strong>GitHub:</strong>
-                                            <a href="https://github.com/EikeHanel/Breakout-Game">Link</a>
-                                        </li>
-                                    </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-xmark me-1"></i>
-                                        Close
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <!-- Portfolio item 6 DATA SCIENCE-->
+        <!-- Portfolio item DATA SCIENCE-->
 
         <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
@@ -1083,6 +948,7 @@
                                             <a href="https://github.com/EikeHanel/Master-Thesis-Data-Processing-and-Analysis">Link</a>
                                         </li>
                                     </ul>
+
                                     <h2 class="text-uppercase" >California House Price Prediction</h2>
                                     <p class="item-intro text-muted">Linear Regression used to predict house prices from public data.</p>
                                     <p>
@@ -1105,36 +971,16 @@
                                             <a href="https://github.com/EikeHanel/LinearRegression_California-House-Price">Link</a>
                                         </li>
                                     </ul>
-                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
-                                        <i class="fas fa-xmark me-1"></i>
-                                        Close
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <!-- Portfolio item 6 PROBLEM SOLVING-->
-
-        <div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="close-modal" data-bs-dismiss="modal"><img src="static/assets/img/close-icon.svg" alt="Close modal" /></div>
-                    <div class="container">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-8">
-                                <div class="modal-body">
-                                    <!-- Project details-->
-                                    <img class="img-fluid d-block mx-auto" src="static/assets/img/portfolio/p_header.jpg" alt="Rubiks Cube" />
-                                    <h2 class="text-uppercase">LeetCode</h2>
-                                    <p class="item-intro text-muted">Building Problem-Solving Expertise</p>
+                                    <h2 class="text-uppercase" >Stock Records - Database</h2>
+                                    <p class="item-intro text-muted">Final project for CS50's Introduction to Databases with SQL</p>
                                     <p>
-                                        Engaging with a wide range of algorithmic problems on LeetCode to refine my
-                                        coding skills and deepen my understanding of data structures,
-                                        preparing for real-world challenges.
+                                        This project is a comprehensive SQL database designed to help users manage
+                                        their stock portfolios. It tracks users, stocks, transactions, and current
+                                        holdings while enabling users to record purchases and sales, view detailed reports,
+                                        and calculate metrics like total spending and profits. The database ensures data
+                                        integrity with constraints, triggers, and optimizations, providing a reliable
+                                        foundation for portfolio tracking without real-time market integration.
                                     </p>
                                     <ul class="list-inline">
                                         <li>
@@ -1143,7 +989,7 @@
                                         </li>
                                         <li>
                                             <strong>GitHub:</strong>
-                                            <a href="https://github.com/EikeHanel/LeetCode">Link</a>
+                                            <a href="https://github.com/EikeHanel/stock-records">Link</a>
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
@@ -1157,6 +1003,7 @@
                 </div>
             </div>
         </div>
+
 
         <!-- Bootstrap core JS-->
 
