Reorganize Data Skills + Add Kaggle reference.

--- a/templates/index.html
+++ b/templates/index.html
@@ -865,71 +865,94 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <div class="modal-body">
+
+
                                     <!-- Project details-->
                                     <img class="img-fluid d-block mx-auto" src="static/assets/img/portfolio/d_header.png" alt="DATA Visuals" />
 
-                                    <h2 class="text-uppercase" >Stock Records - Database</h2>
-                                    <p class="item-intro text-muted">Final project for CS50's Introduction to Databases with SQL</p>
-                                    <p>
-                                        This project is a comprehensive SQL database designed to help users manage
-                                        their stock portfolios. It tracks users, stocks, transactions, and current
-                                        holdings while enabling users to record purchases and sales, view detailed reports,
-                                        and calculate metrics like total spending and profits. The database ensures data
-                                        integrity with constraints, triggers, and optimizations, providing a reliable
-                                        foundation for portfolio tracking without real-time market integration.
-                                    </p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Creator:</strong>
-                                            Eike Hanel
-                                        </li>
-                                        <li>
-                                            <strong>GitHub:</strong>
-                                            <a href="https://github.com/EikeHanel/stock-records">Link</a>
-                                        </li>
-                                    </ul>
+                                    <h2 class="text-uppercase" style="padding-bottom: 20px;">Database Management</h2>
+                                        <h3 class="text-uppercase" >Stock Records</h3>
+                                        <p class="item-intro text-muted">Final project for CS50's Introduction to Databases with SQL</p>
+                                        <p>
+                                            This project is a comprehensive SQL database designed to help users manage
+                                            their stock portfolios. It tracks users, stocks, transactions, and current
+                                            holdings while enabling users to record purchases and sales, view detailed reports,
+                                            and calculate metrics like total spending and profits. The database ensures data
+                                            integrity with constraints, triggers, and optimizations, providing a reliable
+                                            foundation for portfolio tracking without real-time market integration.
+                                        </p>
+                                        <ul class="list-inline">
+                                            <li>
+                                                <strong>Creator:</strong>
+                                                Eike Hanel
+                                            </li>
+                                            <li>
+                                                <strong>GitHub:</strong>
+                                                <a href="https://github.com/EikeHanel/stock-records">Link</a>
+                                            </li>
+                                        </ul>
 
-                                    <h2 class="text-uppercase" >California House Price Prediction</h2>
-                                    <p class="item-intro text-muted">Linear Regression used to predict house prices from public data.</p>
-                                    <p>
-                                        This project showcases my skills in applying linear regression to the
-                                        California Housing dataset to predict housing prices based on demographic and
-                                        geographic features. It involves data exploration, visualization, model training,
-                                        and evaluation using Python. Key tasks include data loading, feature selection,
-                                        model training with scikit-learn, and performance assessment with metrics
-                                        like MAE, MSE, RMSE, and R². The project demonstrates effective use of Python
-                                        libraries for data manipulation and machine learning, with potential for future
-                                        enhancements like feature engineering and advanced model exploration.
-                                    </p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Creator:</strong>
-                                            Eike Hanel
-                                        </li>
-                                        <li>
-                                            <strong>GitHub:</strong>
-                                            <a href="https://github.com/EikeHanel/LinearRegression_California-House-Price">Link</a>
-                                        </li>
-                                    </ul>
+                                    <h2 class="text-uppercase" style="padding-bottom: 20px;">Data Science</h2>
 
-                                    <h2 class="text-uppercase">Master Thesis Data Processing and Analysis</h2>
-                                    <p class="item-intro text-muted">MATLAB scripts for specified data analysis</p>
-                                    <p>
-                                        This project contains some of my MATLAB scripts for my Master Thesis data analysis,
-                                        covering beamline transmission, crater profiles, maximum depth calculations,
-                                        silicon shot analysis, and wavefront sensor profiles. Scripts include
-                                        functionality for processing, analyzing, and visualizing experimental data.
-                                    </p>
-                                    <ul class="list-inline">
-                                        <li>
-                                            <strong>Creator:</strong>
-                                            Eike Hanel
-                                        </li>
-                                        <li>
-                                            <strong>GitHub:</strong>
-                                            <a href="https://github.com/EikeHanel/Master-Thesis-Data-Processing-and-Analysis">Link</a>
-                                        </li>
-                                    </ul>
+                                        <h3 class="text-uppercase">Kaggle</h3>
+                                        <p class="item-intro text-muted">Kaggle is the place to learn data science and build a portfolio.</p>
+                                        <p>
+                                            To further my experience in the field of data science,
+                                            I started using Kaggle.com. It provides the datasets and allows to explore
+                                            and build models in a web-based data science environment,
+                                            work with other data scientists and machine learning engineers,
+                                            and enter competitions to solve data science challenges.
+                                        </p>
+                                        <ul class="list-inline">
+                                            <li>
+                                                <strong>Kaggle Profile:</strong>
+                                                <a href="https://www.kaggle.com/eikehanel">Link</a>
+                                            </li>
+                                        </ul>
+
+
+                                        <h3 class="text-uppercase" >California House Price Prediction</h3>
+                                        <p class="item-intro text-muted">Linear Regression used to predict house prices from public data.</p>
+                                        <p>
+                                            This project showcases my skills in applying linear regression to the
+                                            California Housing dataset to predict housing prices based on demographic and
+                                            geographic features. It involves data exploration, visualization, model training,
+                                            and evaluation using Python. Key tasks include data loading, feature selection,
+                                            model training with scikit-learn, and performance assessment with metrics
+                                            like MAE, MSE, RMSE, and R². The project demonstrates effective use of Python
+                                            libraries for data manipulation and machine learning, with potential for future
+                                            enhancements like feature engineering and advanced model exploration.
+                                        </p>
+                                        <ul class="list-inline">
+                                            <li>
+                                                <strong>Creator:</strong>
+                                                Eike Hanel
+                                            </li>
+                                            <li>
+                                                <strong>GitHub:</strong>
+                                                <a href="https://github.com/EikeHanel/LinearRegression_California-House-Price">Link</a>
+                                            </li>
+                                        </ul>
+
+                                    <h2 class="text-uppercase" style="padding-bottom: 20px;">Data Analysis</h2>
+                                        <h3 class="text-uppercase">Master Thesis Data Processing and Analysis</h3>
+                                        <p class="item-intro text-muted">MATLAB scripts for specified data analysis</p>
+                                        <p>
+                                            This project contains some of my MATLAB scripts for my Master Thesis data analysis,
+                                            covering beamline transmission, crater profiles, maximum depth calculations,
+                                            silicon shot analysis, and wavefront sensor profiles. Scripts include
+                                            functionality for processing, analyzing, and visualizing experimental data.
+                                        </p>
+                                        <ul class="list-inline">
+                                            <li>
+                                                <strong>Creator:</strong>
+                                                Eike Hanel
+                                            </li>
+                                            <li>
+                                                <strong>GitHub:</strong>
+                                                <a href="https://github.com/EikeHanel/Master-Thesis-Data-Processing-and-Analysis">Link</a>
+                                            </li>
+                                        </ul>
 
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
