Fixed a misplacement and changed education image

--- a/templates/index.html
+++ b/templates/index.html
@@ -379,7 +379,7 @@
                                 <div class="modal-body">
 
                                     <!-- Education details-->
-                                    <img class="img-fluid d-block mx-auto" src="static/assets/img/portfolio/h_education.png" alt="Logo of University Emden/Oldenburg and the DESY Institute" />
+                                    <img class="img-fluid d-block mx-auto" src="static/assets/img/portfolio/h_education.jpg" alt="Logo of University Emden/Oldenburg and the DESY Institute" />
 
                                     <h2 class="text-uppercase">Master's Thesis</h2>
                                     <p class="item-intro text-muted">
@@ -839,7 +839,8 @@
 
                                     <!-- Web Development -->
 
-                                    <div style="padding-top: 75px;">
+                                    <h2 class="text-uppercase" style="padding-bottom: 20px;">Web Development</h2>
+                                    <div>
                                         <h3 class="text-uppercase">
                                             Cafe and Wi-Fi Website
                                             <a href="https://github.com/EikeHanel/Cafe-and-Wifi" target="_blank">
@@ -849,8 +850,6 @@
                                         <p class="item-intro text-muted">
                                             A website to display cafes and their services (Wi-Fi, WC, sockets, etc.)
                                         </p>
-
-                                        <h2 class="text-uppercase" style="padding-bottom: 20px;">Web Development</h2>
                                         <h3 class="text-uppercase">
                                             Portfolio Website
                                             <a href="https://github.com/EikeHanel/Portfolio-Website" target="_blank">
