Added a new python certificate from udemy

--- a/templates/index.html
+++ b/templates/index.html
@@ -651,6 +651,31 @@
                                                                 </div>
                                                             </div>
                                                         </div>
+
+                                                        <div class="accordion-item">
+                                                            <h2 class="accordion-header" id="headingPython2">
+                                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsePython2" aria-expanded="false" aria-controls="collapsePython2">
+                                                                    The Complete Python Bootcamp From Zero to Hero in Python
+                                                                </button>
+                                                            </h2>
+                                                            <div id="collapsePython2" class="accordion-collapse collapse" aria-labelledby="headingPython2" data-bs-parent="#pythonAccordion">
+                                                                <div class="accordion-body">
+                                                                    <p>
+                                                                        "The Complete Python Bootcamp: From Zero to Hero in Python" is an all-inclusive course designed to take you from a
+                                                                        complete beginner to a confident Python programmer. You'll learn to harness Python's power to solve real-world problems,
+                                                                        build games like Tic Tac Toe and Blackjack, and develop practical programs using popular Python libraries.
+                                                                        This hands-on course covers both Python 2 and Python 3, diving into advanced concepts like object-oriented programming,
+                                                                        decorators, and the collections module. You'll work with Jupyter Notebooks, create .py files, and even design GUIs,
+                                                                        all while mastering Python through real coding exercises and projects.
+                                                                    </p>
+                                                                    <p>
+                                                                        <strong>Course Instructor:</strong> Jose Portilla <br>
+                                                                        <strong>Certificate: </strong><a href="https://www.udemy.com/certificate/UC-cfc276e7-3176-491f-9777-ef5a02692267/" target="_blank" rel="noopener noreferrer">View Certificate</a> <br>
+                                                                        <strong>Website: </strong><a href="https://www.udemy.com/course/complete-python-bootcamp/" target="_blank" rel="noopener noreferrer"> 100 Days of Code</a>
+                                                                    </p>
+                                                                </div>
+                                                            </div>
+                                                        </div>
                                                     </div>
 
                                                     <!-- SQL Courses -->
@@ -710,7 +735,7 @@
                                                                     </p>
                                                                     <p>
                                                                         <strong>Course Instructor:</strong> Jose Portilla <br>
-                                                                        <strong>Certificate: </strong><a href="https://www.udemy.com/certificate/UC-4463b88e-12a8-43b6-88d5-da2be33aef5c/" target="_blank" rel="noopener noreferrer">View Certificate</a> <br>
+                                                                        <strong>Certificate: </strong><a href="https://www.udemy.com/certificate/UC-921fae62-24c7-40e7-8d41-ce2b150e0b0a/" target="_blank" rel="noopener noreferrer">View Certificate</a> <br>
                                                                         <strong>Website: </strong><a href="https://www.udemy.com/course/python-for-data-science-and-machine-learning-bootcamp/" target="_blank" rel="noopener noreferrer"> Machine Learning Bootcamp</a>
                                                                     </p>
                                                                 </div>
