Fixed wrong links to certificates

--- a/templates/index.html
+++ b/templates/index.html
@@ -670,8 +670,8 @@
                                                                     </p>
                                                                     <p>
                                                                         <strong>Course Instructor:</strong> Jose Portilla <br>
-                                                                        <strong>Certificate: </strong><a href="https://www.udemy.com/certificate/UC-cfc276e7-3176-491f-9777-ef5a02692267/" target="_blank" rel="noopener noreferrer">View Certificate</a> <br>
-                                                                        <strong>Website: </strong><a href="https://www.udemy.com/course/complete-python-bootcamp/" target="_blank" rel="noopener noreferrer"> 100 Days of Code</a>
+                                                                        <strong>Certificate: </strong><a href="https://www.udemy.com/certificate/UC-921fae62-24c7-40e7-8d41-ce2b150e0b0a/" target="_blank" rel="noopener noreferrer">View Certificate</a> <br>
+                                                                        <strong>Website: </strong><a href="https://www.udemy.com/course/complete-python-bootcamp/" target="_blank" rel="noopener noreferrer"> The Complete Python Bootcamp</a>
                                                                     </p>
                                                                 </div>
                                                             </div>
@@ -735,7 +735,7 @@
                                                                     </p>
                                                                     <p>
                                                                         <strong>Course Instructor:</strong> Jose Portilla <br>
-                                                                        <strong>Certificate: </strong><a href="https://www.udemy.com/certificate/UC-921fae62-24c7-40e7-8d41-ce2b150e0b0a/" target="_blank" rel="noopener noreferrer">View Certificate</a> <br>
+                                                                        <strong>Certificate: </strong><a href="https://www.udemy.com/certificate/UC-4463b88e-12a8-43b6-88d5-da2be33aef5c/" target="_blank" rel="noopener noreferrer">View Certificate</a> <br>
                                                                         <strong>Website: </strong><a href="https://www.udemy.com/course/python-for-data-science-and-machine-learning-bootcamp/" target="_blank" rel="noopener noreferrer"> Machine Learning Bootcamp</a>
                                                                     </p>
                                                                 </div>
